# jpg_to_heic

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RELEASE.md  conanfile.py
.github/workflows/: ci.yml
Apps/: CMakeLists.txt
Apps/Demo/: CMakeLists.txt  cmdline.h  heif_enc.cpp  main.cpp
Apps/heic2jpg/: CMakeLists.txt  heif_convert.cpp
Apps/jpg2heic/: CMakeLists.txt  heif_enc.cpp
CMakeModules/: doxygen.cmake  formatting.cmake
Docs/: Doxyfile.in  MathJax.js  RelatedPage.md
Modules/: CMakeLists.txt
Modules/JPGToHeic/: CMakeLists.txt  JpgToHeic.cpp  JpgToHeic.h  LoadJpeg.cpp  LoadJpeg.h  decoder_jpeg.cpp  encoder_jpeg.cpp  encoder_svt.cpp  encoder_svt.h  encoder_x265.h  getopt.h  getopt_long.cpp
Tests/: CMakeLists.txt  TEST.cpp
src/: CMakeLists.txt
src/App/source/: main.cpp
src/Runtime/: CMakelists.txt
src/Runtime/Core/: test.cpp
